# cmake_template

./: CMakeLists.txt  conanfile.txt
cmake/: FindGMock.cmake  FindPoco.cmake  ProjectCheckPlatform.cmake  ProjectSettings.cmake
project_x/: CMakeLists.txt  Platform.h.in  Version.h.in
project_x/include/project_x/: Clock.h  Common.h
project_x/src/: Clock.cpp
project_x/testsuite/: CMakeLists.txt
project_y/: CMakeLists.txt  main.cpp
project_y/src/: ProjectApp.cpp  ProjectApp.h
project_y/testsuite/: CMakeLists.txt
project_y/testsuite/src/: Clock_test.cpp
